tests/error/comptime/pointer_difference17.bz
// error: invalid pointer difference operation with type '*i32'
// note: while evaluating expression at compile time
// note: lhs and rhs addresses point to different subobjects of the same element in this allocation
// note: lhs address points to a subobject at offset 0
// note: rhs address points to a subobject at offset 4
// note: allocation was made while evaluating expression at compile time
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		let p = __builtin_comptime_malloc([i32, i32], 1);
		defer __builtin_comptime_free(p);
		__builtin_inplace_construct(p, [i32, i32]());

		&(*p)[0] - &(*p)[1];
	});
}
